[package]
name = "pomodoro"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["cargo", "derive"] }
termion = "1.5"