[package]
name = "pomodoro"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
description = "command-line pomodoro timer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["cargo", "derive"] }
termion = "2.0"